fix: selection color contrast

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,12 +95,12 @@
 
 ::-moz-selection {
   color: hsl(var(--secondary));
-  background: hsl(var(--accent));
+  background: hsl(var(--secondary-foreground));
 }
 
 ::selection {
   color: hsl(var(--secondary));
-  background: hsl(var(--accent));
+  background: hsl(var(--secondary-foreground));
 }
 
 .pebble-shadow {
